<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.grzegorz.moneybook.AddTransactionActivity">
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="3"
        android:padding="16dp">

        <EditText
            android:id="@+id/value"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_columnSpan="3"
            android:inputType="numberDecimal"
            android:hint="@string/valueStart"
            android:layout_gravity="center"
            android:textSize="25sp" />

        <Spinner
            android:id="@+id/paymentCategory"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_columnSpan="3"
            android:layout_gravity="center"
            android:paddingTop="10sp"
            android:entries="@array/payment_category"
            android:paddingBottom="10dp"/>
        <EditText
            android:id="@+id/date"
            android:layout_column="0"
            android:layout_row="2"
            android:layout_columnSpan="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:enabled="false"
            android:layout_gravity="fill_horizontal"/>
        <Button
            android:id="@+id/changeDate"
            android:layout_column="2"
            android:layout_row="2"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/change_date"
            android:onClick="changeDateOnClick"
            android:textSize="12sp"
            android:layout_gravity="right"
            />
        <EditText
            android:id="@+id/name"
            android:layout_column="0"
            android:layout_row="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/name_hint"
            android:layout_columnSpan="3" />

        <EditText
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_column="0"
            android:layout_row="4"
            android:layout_columnSpan="3"
            android:layout_gravity="fill"
            android:gravity="start"
            android:inputType="text"
            android:hint="@string/description_hint"/>

        <Button
            android:id="@+id/annuledButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_column="0"
            android:layout_row="5"
            android:layout_gravity="left"
            android:textSize="12sp"
            android:text="@string/annuled"
            android:onClick="annuledPaymentOnClick"/>
        <Button
            android:id="@+id/cleanButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_column="1"
            android:layout_row="5"
            android:layout_gravity="center"
            android:textSize="12sp"
            android:text="@string/clean"
            android:onClick="cleanPaymentOnClick"/>
        <Button
            android:id="@+id/confirmButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_column="2"
            android:layout_row="5"
            android:layout_gravity="right"
            android:textSize="12sp"
            android:text="@string/confirm"
            android:onClick="confirmPaymentOnClick"/>



    </GridLayout>
</ScrollView>